# ParaCL

./: .gitignore  CMakeLists.txt
Examples/: arith_test.pcl  factorial.pcl  fibonacci.pcl  generator.sh  tester.sh
Examples/Answers/: column_test.pcl  condition1.pcl  condition2.pcl  condition3.pcl  expr1.pcl  expr10.pcl  expr2.pcl  expr3.pcl  expr4.pcl  expr5.pcl  expr6.pcl  expr7.pcl  expr8.pcl  expr9.pcl  scolon.pcl  scope(bug in interpretator).pcl  unknown_var.pcl  using_before_initialisation.pcl  value.pcl  variable.pcl
Examples/Examples with errors/: column_test.pcl  condition1.pcl  condition2.pcl  condition3.pcl  expr1.pcl  expr10.pcl  expr2.pcl  expr3.pcl  expr4.pcl  expr5.pcl  expr6.pcl  expr8(memory leak in parser).pcl  expr9.pcl  scope(bug in interpretator).pcl  using_before_initialisation.pcl  value.pcl  variable.pcl
Examples/Work examples/: eqn_test.pcl  fibonacci.pcl  io_test.pcl  scopes_test.pcl  test_comm.pcl
Sources/AST/: AST.cpp  AST.h  AST.hpp  Node.hpp
Sources/Driver/: driver.cc  driver.cpp  driver.hpp
Sources/Interpretator/: interpretator.cpp  interpretator.hpp
Sources/Interpreter/: interpreter.cpp  interpreter.hpp
Sources/Lexer/: lexer.hpp  lexer.l
Sources/Parser/: parser.y
Sources/Semantic/: semantic.cpp  semantic.hpp
